<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <include
        android:id="@+id/search_toolbar_host"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/fragment_search_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_toolbar_host"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/paging_controls_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/repositories_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                app:cardCornerRadius="8dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/previous_page_image_button"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:contentDescription="@string/image_button_to_load_previous_page"
                        android:src="@drawable/baseline_arrow_back_ios_24" />

                    <TextView
                        android:id="@+id/current_page_text"
                        android:layout_width="wrap_content"
                        android:minWidth="36dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textSize="24sp"
                        tools:text="2" />

                    <TextView
                        android:id="@+id/max_page_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:minWidth="36dp"
                        android:textSize="24sp"
                        tools:text="/32" />

                    <ImageView
                        android:id="@+id/following_page_image_view"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:contentDescription="@string/image_button_to_load_following_page"
                        android:src="@drawable/baseline_arrow_forward_ios_24" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/repositories_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_simple_repository" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/error_state_view_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="error_state_imageview, error_state_text" />

            <ImageView
                android:id="@+id/error_state_imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/error_state_when_request_failed"
                android:src="@drawable/baseline_refresh_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/error_state_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:gravity="center_horizontal"
                android:text="@string/repositories_failed_to_fetch_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_state_imageview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>