<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".framework.view.activity.HomeActivity">

        <ImageView
            android:id="@+id/avatar_imageview"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/repositorys_owner_avatar"
            android:src="@drawable/baseline_person_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/repository_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:gravity="center"
            android:lines="2"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/avatar_imageview"
            app:layout_constraintTop_toTopOf="@id/avatar_imageview"
            tools:text="ElBartoDroidIA" />

        <TextView
            android:id="@+id/repository_author_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/avatar_imageview"
            app:layout_constraintTop_toBottomOf="@id/repository_name_text"
            tools:text="by El Barto" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/repository_name_text"
            app:layout_constraintStart_toStartOf="@id/avatar_imageview"
            app:layout_constraintTop_toBottomOf="@id/avatar_imageview"
            android:textSize="16sp"
            tools:text="El Barto paso por aca una y otra vez, esas fueron sus branchess" />

        <TextView
            android:id="@+id/owner_url_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description_text"
            app:layout_constraintStart_toStartOf="@id/avatar_imageview"
            app:layout_constraintEnd_toEndOf="@id/repository_name_text"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/holo_blue_dark"
            tools:text="https://api.github.com/users/ElBarto"/>


        <TextView
            android:id="@+id/watchers_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/owner_url_text"
            app:layout_constraintStart_toStartOf="@id/owner_url_text"
            android:layout_marginTop="24dp"
            android:text="@string/watchers"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/watchers_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/watchers_count_label"
            app:layout_constraintBottom_toBottomOf="@id/watchers_count_label"
            app:layout_constraintStart_toEndOf="@id/watchers_count_label"
            android:layout_marginStart="8dp"
            tools:text="23456"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/issues_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/watchers_count_label"
            app:layout_constraintStart_toStartOf="@id/owner_url_text"
            android:layout_marginTop="16dp"
            android:text="@string/issues"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/issues_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/issues_count_label"
            app:layout_constraintBottom_toBottomOf="@id/issues_count_label"
            app:layout_constraintStart_toEndOf="@id/issues_count_label"
            android:layout_marginStart="8dp"
            tools:text="1234"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>